// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Restrictions Page should render global daily restrictions when VRTM is enabled 1`] = `
<ThemeProvider>
  <Page
    py="xl"
    title="Compliance – Polymath"
  >
    <h1
      className="pui-h1"
    >
      Trade Volume Restrictions
    </h1>
    <Grid
      gridGap={4}
    >
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={6}
        >
          <h3
            className="pui-h3"
          >
            Allows you to define the maximum number of tokens your investors can sell during a customized rolling period. Limits can be set globally for all investors or individually by investor. For example, you may limit all your investors to selling 100 tokens in a rolling 24-hour period and 1,000 tokens in a rolling 90-day period.
          </h3>
          <Remark
            title="Note"
          >
            Investors to whom individual limits are applied are only subject to their individual limits and are exempt from the global limits.
          </Remark>
        </GridCol>
        <GridCol
          gridSpan={6}
        >
          <CardFeatureState
            IconAsset={[Function]}
            maxWidth={355}
            status="idle"
            style={Object {}}
          >
            <Heading__StyledHeading
              as="h2"
              color="primary"
              lineHeight="normal"
              mb="m"
              mt={2}
              variant="h3"
            >
              Enable Enforcement of Trade Volume Restrictions
            </Heading__StyledHeading>
            <div
              className="center"
            >
              <Toggle
                defaultToggled={false}
                id="volumeRestrictionToggle"
                labelA="Off"
                labelB="On"
                onToggle={[Function]}
                toggled={true}
              />
            </div>
          </CardFeatureState>
        </GridCol>
      </GridRow>
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={12}
        >
          <Tabs
            ariaLabel="listbox"
            iconDescription="show menu options"
            role="navigation"
            selected={0}
            triggerHref="#"
          >
            <Tab
              href="#"
              label="Global Restrictions"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={0}
            >
              <h1
                className="pui-h1"
              >
                Global Restrictions
              </h1>
              <h3
                className="pui-h3"
              >
                Specify a single rolling period restriction for all investors. The Global Restriction will enforce a maximum number of tokens each investor can sell during the rolling period you define. Easily set to 24 hours or customize your rolling period. Your trade volume cap is specified as the number of tokens or the percentage of total token supply.
              </h3>
              <FormModal
                handleClose={[Function]}
                isOpen={false}
                restrictionType={null}
              />
              <Grid
                gridGap={4}
              >
                <GridRow
                  gridGap={4}
                >
                  <GridCol
                    gridSpan={4}
                  >
                    <CardFeatureState
                      IconAsset={[Function]}
                      maxWidth="none"
                      status="inactive"
                      style={
                        Object {
                          "height": "400px",
                        }
                      }
                    >
                      <Heading__StyledHeading
                        as="h2"
                        color="primary"
                        lineHeight="normal"
                        mb="m"
                        mt={2}
                        variant="h3"
                      >
                        24h Rolling Period Restriction
                      </Heading__StyledHeading>
                      <p
                        className="card-text"
                      >
                        Configure a maximum number of tokens any investor may be able to sell within a rolling 24h period.
                      </p>
                      <div
                        className="restriction-inactive"
                      />
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="primary"
                      >
                        Configure 24h Restriction
                      </ButtonLarge>
                    </CardFeatureState>
                  </GridCol>
                  <GridCol
                    gridSpan={4}
                  >
                    <CardFeatureState
                      IconAsset={[Function]}
                      maxWidth="none"
                      status="idle"
                      style={
                        Object {
                          "height": "400px",
                        }
                      }
                    >
                      <Heading__StyledHeading
                        as="h2"
                        color="primary"
                        lineHeight="normal"
                        mb="m"
                        mt={2}
                        variant="h3"
                      >
                        Custom Rolling Period Restriction
                      </Heading__StyledHeading>
                      <p
                        className="card-text"
                      >
                        Configure a maximum number of tokens any Investor may be able to sell within a custom rolling period.
                      </p>
                      <RestrictionDetails
                        restriction={
                          Object {
                            "allowedTokens": 500,
                            "endTime": "2020-12-25T05:00:00.000Z",
                            "restrictionType": 0,
                            "startTime": "2019-12-25T05:00:00.000Z",
                          }
                        }
                      />
                      <div
                        className="restriction-active"
                      />
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="primary"
                      >
                        Configure Custom Restriction
                      </ButtonLarge>
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="ghostPrimary"
                      >
                        Reset the Restriction
                      </ButtonLarge>
                    </CardFeatureState>
                  </GridCol>
                </GridRow>
              </Grid>
            </Tab>
            <Tab
              href="#"
              label="Individual Restrictions"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={0}
            >
              <IndividualRestrictions />
            </Tab>
          </Tabs>
        </GridCol>
      </GridRow>
    </Grid>
  </Page>
</ThemeProvider>
`;

exports[`Restrictions Page should render global default restrictions when VRTM is enabled 1`] = `
<ThemeProvider>
  <Page
    py="xl"
    title="Compliance – Polymath"
  >
    <h1
      className="pui-h1"
    >
      Trade Volume Restrictions
    </h1>
    <Grid
      gridGap={4}
    >
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={6}
        >
          <h3
            className="pui-h3"
          >
            Allows you to define the maximum number of tokens your investors can sell during a customized rolling period. Limits can be set globally for all investors or individually by investor. For example, you may limit all your investors to selling 100 tokens in a rolling 24-hour period and 1,000 tokens in a rolling 90-day period.
          </h3>
          <Remark
            title="Note"
          >
            Investors to whom individual limits are applied are only subject to their individual limits and are exempt from the global limits.
          </Remark>
        </GridCol>
        <GridCol
          gridSpan={6}
        >
          <CardFeatureState
            IconAsset={[Function]}
            maxWidth={355}
            status="idle"
            style={Object {}}
          >
            <Heading__StyledHeading
              as="h2"
              color="primary"
              lineHeight="normal"
              mb="m"
              mt={2}
              variant="h3"
            >
              Enable Enforcement of Trade Volume Restrictions
            </Heading__StyledHeading>
            <div
              className="center"
            >
              <Toggle
                defaultToggled={false}
                id="volumeRestrictionToggle"
                labelA="Off"
                labelB="On"
                onToggle={[Function]}
                toggled={true}
              />
            </div>
          </CardFeatureState>
        </GridCol>
      </GridRow>
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={12}
        >
          <Tabs
            ariaLabel="listbox"
            iconDescription="show menu options"
            role="navigation"
            selected={0}
            triggerHref="#"
          >
            <Tab
              href="#"
              label="Global Restrictions"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={0}
            >
              <h1
                className="pui-h1"
              >
                Global Restrictions
              </h1>
              <h3
                className="pui-h3"
              >
                Specify a single rolling period restriction for all investors. The Global Restriction will enforce a maximum number of tokens each investor can sell during the rolling period you define. Easily set to 24 hours or customize your rolling period. Your trade volume cap is specified as the number of tokens or the percentage of total token supply.
              </h3>
              <FormModal
                handleClose={[Function]}
                isOpen={false}
                restrictionType={null}
              />
              <Grid
                gridGap={4}
              >
                <GridRow
                  gridGap={4}
                >
                  <GridCol
                    gridSpan={4}
                  >
                    <CardFeatureState
                      IconAsset={[Function]}
                      maxWidth="none"
                      status="idle"
                      style={
                        Object {
                          "height": "400px",
                        }
                      }
                    >
                      <Heading__StyledHeading
                        as="h2"
                        color="primary"
                        lineHeight="normal"
                        mb="m"
                        mt={2}
                        variant="h3"
                      >
                        24h Rolling Period Restriction
                      </Heading__StyledHeading>
                      <p
                        className="card-text"
                      >
                        Configure a maximum number of tokens any investor may be able to sell within a rolling 24h period.
                      </p>
                      <RestrictionDetails
                        restriction={
                          Object {
                            "allowedTokens": 500,
                            "endTime": "2020-12-25T05:00:00.000Z",
                            "restrictionType": 0,
                            "startTime": "2019-12-25T05:00:00.000Z",
                          }
                        }
                      />
                      <div
                        className="restriction-active"
                      />
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="primary"
                      >
                        Configure 24h Restriction
                      </ButtonLarge>
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="ghostPrimary"
                      >
                        Reset the Restriction
                      </ButtonLarge>
                    </CardFeatureState>
                  </GridCol>
                  <GridCol
                    gridSpan={4}
                  >
                    <CardFeatureState
                      IconAsset={[Function]}
                      maxWidth="none"
                      status="inactive"
                      style={
                        Object {
                          "height": "400px",
                        }
                      }
                    >
                      <Heading__StyledHeading
                        as="h2"
                        color="primary"
                        lineHeight="normal"
                        mb="m"
                        mt={2}
                        variant="h3"
                      >
                        Custom Rolling Period Restriction
                      </Heading__StyledHeading>
                      <p
                        className="card-text"
                      >
                        Configure a maximum number of tokens any Investor may be able to sell within a custom rolling period.
                      </p>
                      <div
                        className="restriction-inactive"
                      />
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="primary"
                      >
                        Configure Custom Restriction
                      </ButtonLarge>
                    </CardFeatureState>
                  </GridCol>
                </GridRow>
              </Grid>
            </Tab>
            <Tab
              href="#"
              label="Individual Restrictions"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={0}
            >
              <IndividualRestrictions />
            </Tab>
          </Tabs>
        </GridCol>
      </GridRow>
    </Grid>
  </Page>
</ThemeProvider>
`;

exports[`Restrictions Page should render global restrictions tab when VRTM is enabled 1`] = `
<ThemeProvider>
  <Page
    py="xl"
    title="Compliance – Polymath"
  >
    <h1
      className="pui-h1"
    >
      Trade Volume Restrictions
    </h1>
    <Grid
      gridGap={4}
    >
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={6}
        >
          <h3
            className="pui-h3"
          >
            Allows you to define the maximum number of tokens your investors can sell during a customized rolling period. Limits can be set globally for all investors or individually by investor. For example, you may limit all your investors to selling 100 tokens in a rolling 24-hour period and 1,000 tokens in a rolling 90-day period.
          </h3>
          <Remark
            title="Note"
          >
            Investors to whom individual limits are applied are only subject to their individual limits and are exempt from the global limits.
          </Remark>
        </GridCol>
        <GridCol
          gridSpan={6}
        >
          <CardFeatureState
            IconAsset={[Function]}
            maxWidth={355}
            status="idle"
            style={Object {}}
          >
            <Heading__StyledHeading
              as="h2"
              color="primary"
              lineHeight="normal"
              mb="m"
              mt={2}
              variant="h3"
            >
              Enable Enforcement of Trade Volume Restrictions
            </Heading__StyledHeading>
            <div
              className="center"
            >
              <Toggle
                defaultToggled={false}
                id="volumeRestrictionToggle"
                labelA="Off"
                labelB="On"
                onToggle={[Function]}
                toggled={true}
              />
            </div>
          </CardFeatureState>
        </GridCol>
      </GridRow>
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={12}
        >
          <Tabs
            ariaLabel="listbox"
            iconDescription="show menu options"
            role="navigation"
            selected={0}
            triggerHref="#"
          >
            <Tab
              href="#"
              label="Global Restrictions"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={0}
            >
              <h1
                className="pui-h1"
              >
                Global Restrictions
              </h1>
              <h3
                className="pui-h3"
              >
                Specify a single rolling period restriction for all investors. The Global Restriction will enforce a maximum number of tokens each investor can sell during the rolling period you define. Easily set to 24 hours or customize your rolling period. Your trade volume cap is specified as the number of tokens or the percentage of total token supply.
              </h3>
              <FormModal
                handleClose={[Function]}
                isOpen={false}
                restrictionType={null}
              />
              <Grid
                gridGap={4}
              >
                <GridRow
                  gridGap={4}
                >
                  <GridCol
                    gridSpan={4}
                  >
                    <CardFeatureState
                      IconAsset={[Function]}
                      maxWidth="none"
                      status="inactive"
                      style={
                        Object {
                          "height": "400px",
                        }
                      }
                    >
                      <Heading__StyledHeading
                        as="h2"
                        color="primary"
                        lineHeight="normal"
                        mb="m"
                        mt={2}
                        variant="h3"
                      >
                        24h Rolling Period Restriction
                      </Heading__StyledHeading>
                      <p
                        className="card-text"
                      >
                        Configure a maximum number of tokens any investor may be able to sell within a rolling 24h period.
                      </p>
                      <div
                        className="restriction-inactive"
                      />
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="primary"
                      >
                        Configure 24h Restriction
                      </ButtonLarge>
                    </CardFeatureState>
                  </GridCol>
                  <GridCol
                    gridSpan={4}
                  >
                    <CardFeatureState
                      IconAsset={[Function]}
                      maxWidth="none"
                      status="inactive"
                      style={
                        Object {
                          "height": "400px",
                        }
                      }
                    >
                      <Heading__StyledHeading
                        as="h2"
                        color="primary"
                        lineHeight="normal"
                        mb="m"
                        mt={2}
                        variant="h3"
                      >
                        Custom Rolling Period Restriction
                      </Heading__StyledHeading>
                      <p
                        className="card-text"
                      >
                        Configure a maximum number of tokens any Investor may be able to sell within a custom rolling period.
                      </p>
                      <div
                        className="restriction-inactive"
                      />
                      <ButtonLarge
                        className="card-button"
                        onClick={[Function]}
                        variant="primary"
                      >
                        Configure Custom Restriction
                      </ButtonLarge>
                    </CardFeatureState>
                  </GridCol>
                </GridRow>
              </Grid>
            </Tab>
            <Tab
              href="#"
              label="Individual Restrictions"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="presentation"
              selected={false}
              tabIndex={0}
            >
              <IndividualRestrictions />
            </Tab>
          </Tabs>
        </GridCol>
      </GridRow>
    </Grid>
  </Page>
</ThemeProvider>
`;

exports[`Restrictions Page should render not found when there is no token 1`] = `<NotFoundPage />`;

exports[`Restrictions Page should render the page with VRTM disabled 1`] = `
<ThemeProvider>
  <Page
    py="xl"
    title="Compliance – Polymath"
  >
    <h1
      className="pui-h1"
    >
      Trade Volume Restrictions
    </h1>
    <Grid
      gridGap={4}
    >
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={6}
        >
          <h3
            className="pui-h3"
          >
            Allows you to define the maximum number of tokens your investors can sell during a customized rolling period. Limits can be set globally for all investors or individually by investor. For example, you may limit all your investors to selling 100 tokens in a rolling 24-hour period and 1,000 tokens in a rolling 90-day period.
          </h3>
          <Remark
            title="Note"
          >
            Investors to whom individual limits are applied are only subject to their individual limits and are exempt from the global limits.
          </Remark>
        </GridCol>
        <GridCol
          gridSpan={6}
        >
          <CardFeatureState
            IconAsset={[Function]}
            maxWidth={355}
            status="inactive"
            style={Object {}}
          >
            <Heading__StyledHeading
              as="h2"
              color="primary"
              lineHeight="normal"
              mb="m"
              mt={2}
              variant="h3"
            >
              Enable Enforcement of Trade Volume Restrictions
            </Heading__StyledHeading>
            <div
              className="center"
            >
              <Toggle
                defaultToggled={false}
                id="volumeRestrictionToggle"
                labelA="Off"
                labelB="On"
                onToggle={[Function]}
              />
            </div>
          </CardFeatureState>
        </GridCol>
      </GridRow>
      <GridRow
        gridGap={4}
      >
        <GridCol
          gridSpan={12}
        />
      </GridRow>
    </Grid>
  </Page>
</ThemeProvider>
`;
